--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <script src="./print.bundle.js"></script>
+    <script src="../dist/print.bundle.js"></script>
     <title>Sandbox</title>
   </head>
   <body>
-    <script src="./app.bundle.js"></script>
+    <script src="../dist/app.bundle.js"></script>
   </body>
 </html>
