--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <title>Sandbox</title>
   </head>
   <body>
+    <div class="container"><h1>tt</h1></div>
     <script src="../dist/app.bundle.js"></script>
   </body>
 </html>
